--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
 <p>dashboard works!</p>
+<!-- passing the message variable of dashboard to the child -->
+<app-child-dashboard></app-child-dashboard>
+Message of parent: {{ message }}
+<app-clients></app-clients>
