--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container">
-  <app-translate></app-translate>
+  <flash-messages></flash-messages>
   <router-outlet></router-outlet>
 </div>
+<app-translate></app-translate>
