--- a/src/app/components/edit-client/edit-client.component.html
+++ b/src/app/components/edit-client/edit-client.component.html
@@ -1,1 +1,134 @@
-<p>edit-client works!</p>
+<div class="row">
+  <div class="col-md-6">
+    <a routerLink="/client/{{ id }}" class="btn btn-link">
+      <i class="fa fa-arrow-circle-o-left"></i>
+      Back To Client
+    </a>
+  </div>
+  <div class="col-md-6"></div>
+</div>
+
+<div class="card">
+  <div class="card-header">
+    Edit Client
+  </div>
+  <div class="card-body">
+    <form #clientForm="ngForm" (ngSubmit)="onSubmit(clientForm)">
+      <!-- firstname -->
+      <div class="form-group">
+        <label for="firstName">First Name</label>
+        <input
+          type="text"
+          class="form-control"
+          name="firstName"
+          #clientFirstName="ngModel"
+          [ngClass]="{
+            'is-invalid': clientFirstName.errors && clientFirstName.touched
+          }"
+          [(ngModel)]="client.firstName"
+          minlength="2"
+          required
+        />
+        <div
+          [hidden]="!clientFirstName.errors?.required"
+          class="invalid-feedback"
+        >
+          First name required
+        </div>
+        <div
+          [hidden]="!clientFirstName.errors?.minlength"
+          class="invalid-feedback"
+        >
+          Must be at least 2 characters
+        </div>
+      </div>
+      <!-- lastname -->
+      <div class="form-group">
+        <label for="lastName">lastName</label>
+        <input
+          type="text"
+          class="form-control"
+          name="lastName"
+          #clientlastName="ngModel"
+          [ngClass]="{
+            'is-invalid': clientlastName.errors && clientlastName.touched
+          }"
+          [(ngModel)]="client.lastName"
+          minlength="2"
+          required
+        />
+        <div
+          [hidden]="!clientlastName.errors?.required"
+          class="invalid-feedback"
+        >
+          Last name required
+        </div>
+        <div
+          [hidden]="!clientlastName.errors?.minlength"
+          class="invalid-feedback"
+        >
+          Must be at least 2 characters
+        </div>
+      </div>
+      <!-- email -->
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input
+          type="text"
+          class="form-control"
+          name="email"
+          #clientemail="ngModel"
+          [ngClass]="{
+            'is-invalid': clientemail.errors && clientemail.touched
+          }"
+          [(ngModel)]="client.email"
+          pattern="[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?"
+          required
+        />
+        <div [hidden]="!clientemail.errors?.required" class="invalid-feedback">
+          Email required
+        </div>
+        <div [hidden]="!clientemail.errors?.pattern" class="invalid-feedback">
+          Email is not valid
+        </div>
+      </div>
+      <!-- phone -->
+      <div class="form-group">
+        <label for="phone">phone</label>
+        <input
+          type="text"
+          class="form-control"
+          name="phone"
+          #clientphone="ngModel"
+          [ngClass]="{
+            'is-invalid': clientphone.errors && clientphone.touched
+          }"
+          [(ngModel)]="client.phone"
+          minlength="10"
+          required
+        />
+        <div [hidden]="!clientphone.errors?.required" class="invalid-feedback">
+          phone required
+        </div>
+        <div [hidden]="!clientphone.errors?.minlength" class="invalid-feedback">
+          phone is not valid
+        </div>
+      </div>
+
+      <!-- balance -->
+      <div class="form-group">
+        <label for="balance">Balance</label>
+        <input
+          type="number"
+          class="form-control"
+          name="balance"
+          #clientbalance="ngModel"
+          [(ngModel)]="client.balance"
+          [disabled]="disableBalanceOnEdit"
+        />
+      </div>
+
+      <input type="submit" value="Submit" class="btn btn-primary btn-block" />
+    </form>
+  </div>
+</div>
