--- a/src/app/components/translate/translate.component.html
+++ b/src/app/components/translate/translate.component.html
@@ -1,15 +1,25 @@
-<br />
-<h1>
-  {{ "translate.title" | translate }}
-</h1>
-
-<br />
-<h2>
-  {{ "translate.content" | translate }}
-</h2>
-
-<div>
-  <button (click)="change('pt')">PT</button>
-  <button (click)="change('de')">DE</button>
-  <button (click)="change('en')">EN</button>
+<div
+  class="footer card-footer text-muted d-flex flex-row justify-content-between"
+>
+  <div>&copy; {{ "TRANSLATE.FOOTER.LABEL_LEFT" | translate }}</div>
+  <div>
+    {{ "TRANSLATE.FOOTER.LABEL_MIDDLE" | translate }}
+  </div>
+  <div>
+    <div class="btn-group dropup dropleft">
+      <a type="button" data-toggle="dropdown">
+        <img
+          src="../../../assets/icons/language-black-48dp.svg"
+          width="32"
+          height="30"
+          alt="Config"
+        />
+      </a>
+      <div class="dropdown-menu">
+        <button class="dropdown-item" (click)="change('en')">EN</button>
+        <button class="dropdown-item" (click)="change('de')">DE</button>
+        <button class="dropdown-item" (click)="change('pt')">PT</button>
+      </div>
+    </div>
+  </div>
 </div>
