--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,6 +8,33 @@
           </span>
           Login
         </h1>
+        <form submit="onSubmit()">
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              name="email"
+              [(ngModel)]="email"
+              class="form-control"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="password">password</label>
+            <input
+              type="password"
+              name="password"
+              class="form-control"
+              [(ngModel)]="password"
+              required
+            />
+          </div>
+          <input
+            type="submit"
+            value="Login"
+            class="btn btn-primary btn-block"
+          />
+        </form>
       </div>
     </div>
   </div>
