--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
           </span>
           Login
         </h1>
-        <form submit="onSubmit()">
+        <form (submit)="onSubmit()">
           <div class="form-group">
             <label for="email">Email</label>
             <input
